# rtdetr-finetune

./: .gitignore  README.md  ball_detect_offline.py  ball_track_proto.py  ball_traj_proto.py  colab_train.ipynb  dataset.py  dataset_stats.py  eval_testset.py  eval_visualize.py  prepare_data.py  probe_video.py  pyproject.toml  split_coco.py  train.py
models/final/: config.json
rtdetr-tennis/final/: config.json  preprocessor_config.json  training_run.json
