[project]
name = "rtdetr-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "faster-coco-eval>=1.7.2",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "transformers>=4.40",
]
